update to tandem

--- a/a/index.html
+++ b/a/index.html
@@ -36,6 +36,7 @@
             <button data-target="orange">🔍</button>
             <button data-target="green">📞</button>
             <button data-target="blue">👤</button>
+            <button data-target="rectangle">🟧</button> 
         </nav>
 
         <footer>
