--- a/a/index.html
+++ b/a/index.html
@@ -1,48 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Legacy & Sustainability</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Enhanced Legacy & Sustainability</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            Enhanced Legacy & Sustainability
-        </header>
+  <div class="container">
+    <header>Enhanced Legacy & Sustainability</header>
 
-        <div class="diagram-container">
-            <div class="diagram">
-                <div class="circle red" style="top: 20%; left: 50%; transform: translate(-50%, -50%);">Scope risks, vulnerabilities & impacts</div>
-                <div class="circle orange" style="top: 50%; left: 80%; transform: translate(-50%, -50%);">Challenges & goals</div>
-                <div class="circle green" style="top: 80%; left: 50%; transform: translate(-50%, -50%);">Co-design solutions</div>
-                <div class="circle blue" style="top: 50%; left: 20%; transform: translate(-50%, -50%);">Monitor, assess, & recalibrate actions</div>
-                <div class="center-rectangle">
-                    <div class="content">
-                        Begin early co-design of MEL framework<br>
-                        Tailored communication of climate information & risks<br>
-                        Co-develop capacities of providers & users<br>
-                        Partnership development<br>
-                        Explore financing models
-                    </div>
-                </div>
-            </div>
+    <div class="diagram-container">
+
+      <div class="diagram">
+        <!-- Circles -->
+        <div class="circle red" style="top: 20%; left: 50%; transform: translate(-50%, -50%)">
+          <svg viewBox="0 0 200 200" class="text-circle">
+            <path id="circlePathRed" d="M 100, 100 m -90, 0 a 90,90 0 1,1 180,0 a 90,90 0 1,1 -180,0"/>
+            <text>
+              <textPath href="#circlePathRed" startOffset="25%" text-anchor="middle">
+                Scope & review risks, vulnerability & impact
+              </textPath>
+            </text>
+          </svg>
+          <div class="inner-circle">Engage stakeholders</div>
+          <div class="inner-circle">Identify stakeholders</div>
+          <div class="inner-circle">Review risks</div>
+        </div>
+        <div class="circle orange" style="top: 50%; left: 80%; transform: translate(-50%, -50%)">
+          <svg viewBox="0 0 200 200" class="text-circle">
+            <path id="circlePathOrange" d="M 100, 100 m -90, 0 a 90,90 0 1,1 180,0 a 90,90 0 1,1 -180,0"/>
+            <text>
+              <textPath href="#circlePathOrange" startOffset="25%" text-anchor="middle">
+                Co-explore
+              </textPath>
+            </text>
+          </svg>
+          <div class="inner-circle">Information needs</div>
+          <div class="inner-circle">Governance context</div>
+          <div class="inner-circle">Challenges & goals</div>
+        </div>
+        <div class="circle green" style="top: 80%; left: 50%; transform: translate(-50%, -50%)">
+          <svg viewBox="0 0 200 200" class="text-circle">
+            <path id="circlePathGreen" d="M 100, 100 m -90, 0 a 90,90 0 1,1 180,0 a 90,90 0 1,1 -180,0"/>
+            <text>
+              <textPath href="#circlePathGreen" startOffset="25%" text-anchor="middle">
+                Co-design
+              </textPath>
+            </text>
+          </svg>
+          <div class="inner-circle">Appraise solutions</div>
+          <div class="inner-circle">Co-explore solutions</div>
+          <div class="inner-circle">Identify solutions</div>
+        </div>
+        <div class="circle blue" style="top: 50%; left: 20%; transform: translate(-50%, -50%)">
+          <svg viewBox="0 0 200 200" class="text-circle">
+            <path id="circlePathBlue" d="M 100, 100 m -90, 0 a 90,90 0 1,1 180,0 a 90,90 0 1,1 -180,0"/>
+            <text>
+              <textPath href="#circlePathBlue" startOffset="25%" text-anchor="middle">
+                Integrate new knowledge and partners
+              </textPath>
+            </text>
+          </svg>
+          <div class="inner-circle">Iterative learning</div>
+          <div class="inner-circle">Reflexive learning</div>
+          <div class="inner-circle">Evaluate progress</div>
+        </div>
+        <div class="center-rectangle">
+          <div class="content">
+            Begin early co-design of MEL framework<br />
+            Tailored communication of climate information & risks<br />
+            Co-develop capacities of providers & users<br />
+            Partnership development<br />
+            Explore financing models
+          </div>
         </div>
 
-        <nav>
-            <button data-target="red">⬅️</button>
-            <button data-target="orange">🔍</button>
-            <button data-target="green">📞</button>
-            <button data-target="blue">👤</button>
-            <button data-target="rectangle">🟧</button> 
-        </nav>
-
-        <footer>
-            <button class="zoom-out">Zoom Out</button>
-        </footer>
+        <!-- Arrows -->
+        <img src="group.svg" class="arrow arrow-red-to-orange" />
+        <img src="group.svg" class="arrow arrow-orange-to-green" />
+        <img src="group.svg" class="arrow arrow-green-to-blue" />
+        <img src="group.svg" class="arrow arrow-blue-to-red" />
+      </div>
     </div>
-    <script src="script.js"></script>
+
+    <nav>
+      <button data-target="red">⬅️</button>
+      <button data-target="orange">🔍</button>
+      <button data-target="green">📞</button>
+      <button data-target="blue">👤</button>
+      <button data-target="rectangle">🟧</button>
+    </nav>
+
+    <footer>
+      <button class="zoom-out">Zoom Out</button>
+    </footer>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
